--- a/2024.07.01/example_02/index.html
+++ b/2024.07.01/example_02/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    Hello world
+    <!-- Hello world
     <div>div입니다.</div>
 
     <ul id="first-ul">
@@ -42,6 +42,37 @@
     <a href="https://naver.com" target="_blank">네이버 바로가기</a>
     <a href="" target="_self">네이버 바로가기2</a>
 
-    
+    <h2>제목 2</h2>
+
+    <div>
+        <h2>div안의 제목 2</h2>
+    </div> -->
+
+    <!-- <p>바깥의 문단 태그입니다.</p>
+
+    <div class="parent">
+        div입니다.
+
+        <p>문단 태그 입니다.</p>
+        <p>문단 태그 입니다.</p>
+
+        <div class="child">
+            <p>제일 깊이 있는 문단 태그</p>
+        </div>
+    </div> -->
+    <!-- <div>
+        <p>before 문단1</p>
+        <a href="#">링크1</a>
+        <p>문단 1</p>
+        <p>문단 2</p>
+        <p>문단 3</p>
+        <p>문단 4</p>
+    </div>
+
+    <div>
+        <p>문단 5</p>
+    </div> -->
+
+    <!-- <div class="foo" id="bar" style="color: yellow;">hello world</div> -->
 </body>
 </html>
